--- a/Martyrs.html
+++ b/Martyrs.html
@@ -155,89 +155,89 @@ As another deacon, Nicholas of Antioch, is specifically stated to have been a co
 <p>
 1 And the high priest said, "Are these things so?" 
 <br>
-2 And Stephen said: 1"Brothers and fathers, hear me. 2The God 3of glory appeared to our father Abraham when he was in Mesopotamia, 4before he lived in Haran, 
+2 And Stephen said: 1:"Brothers and fathers, hear me. 2:The God 3of glory appeared to our father Abraham when he was in Mesopotamia, 4:before he lived in Haran, 
 <br>
-3 and said to him, 5`Go out from your land and from your kindred and go into the land that I will show you.` 
- 
-<br>
- 
-4 6Then he went out from the land of the Chaldeans and lived in Haran. And 7after his father died, 8God removed him from there into this land in which you are now living. 
+3 and said to him, 5:`Go out from your land and from your kindred and go into the land that I will show you.` 
  
 <br>
  
-5 Yet he gave him no inheritance in it, not even a foot`s length, but promised 9to give it to him as a possession and to his offspring after him, 10though he had no child. 
+4 6:Then he went out from the land of the Chaldeans and lived in Haran. And 7:after his father died, 8:God removed him from there into this land in which you are now living. 
  
 <br>
  
-6 And God spoke to this effect--that 11his offspring would 12be sojourners in a land belonging to others, who would enslave them and afflict them 13four hundred years. 
+5 Yet he gave him no inheritance in it, not even a foot`s length, but promised 9:to give it to him as a possession and to his offspring after him, 10:though he had no child. 
  
 <br>
  
-7 `But 14I will judge the nation that they serve,` said God, `and after that they shall come out 15and worship me in this place.` 
+6 And God spoke to this effect--that 11:his offspring would 12:be sojourners in a land belonging to others, who would enslave them and afflict them 13:four hundred years. 
  
 <br>
  
-8 And 16he gave him the covenant of circumcision. And 17so Abraham became the father of Isaac, and 18circumcised him on the eighth day, and 19Isaac became the father of Jacob, and 20Jacob of the twelve patriarchs. 
+7 `But 14:I will judge the nation that they serve,` said God, `and after that they shall come out 15:and worship me in this place.` 
  
 <br>
  
-9 "And the patriarchs, 21jealous of Joseph, 22sold him into Egypt; but 23God was with him 
+8 And 16:he gave him the covenant of circumcision. And 17:so Abraham became the father of Isaac, and 18:circumcised him on the eighth day, and 19:Isaac became the father of Jacob, and 20:Jacob of the twelve patriarchs. 
  
 <br>
  
-10 and rescued him out of all his afflictions and 24gave him favor and wisdom before Pharaoh, king of Egypt, 25who made him ruler over Egypt and over all his household. 
+9 "And the patriarchs, 21:jealous of Joseph, 22:sold him into Egypt; but 23G:od was with him 
  
 <br>
  
-11 Now 26there came a famine throughout all Egypt and Canaan, and great affliction, and our fathers could find no food. 
+10 and rescued him out of all his afflictions and 24:gave him favor and wisdom before Pharaoh, king of Egypt, 25:who made him ruler over Egypt and over all his household. 
  
 <br>
  
-12 27But when Jacob heard that there was grain in Egypt, he sent out our fathers on their first visit. 
+11 Now 26:there came a famine throughout all Egypt and Canaan, and great affliction, and our fathers could find no food. 
  
 <br>
  
-13 And 28on the second visit 29Joseph made himself known to his brothers, and 30Joseph`s family became known to Pharaoh. 
+12 27:But when Jacob heard that there was grain in Egypt, he sent out our fathers on their first visit. 
  
 <br>
  
-14 And 31Joseph sent and summoned Jacob his father and all his kindred, 32seventy-five persons in all. 
+13 And 28:on the second visit 29:Joseph made himself known to his brothers, and 30:Joseph`s family became known to Pharaoh. 
  
 <br>
  
-15 And 33Jacob went down into Egypt, and 34he died, he 35and our fathers, 
+14 And 31:Joseph sent and summoned Jacob his father and all his kindred, 32:seventy-five persons in all. 
  
 <br>
  
-16 and 36they were carried back to Shechem and laid in the tomb that 37Abraham had bought for a sum of silver from the sons of Hamor in Shechem. 
+15 And 33:Jacob went down into Egypt, and 34:he died, he 35:and our fathers, 
  
 <br>
  
-17 "But 38as the time of the promise drew near, which God had granted to Abraham, 39the people increased and multiplied in Egypt 
+16 and 36:they were carried back to Shechem and laid in the tomb that 37:Abraham had bought for a sum of silver from the sons of Hamor in Shechem. 
  
 <br>
  
-18 until there arose over Egypt another king 40who did not know Joseph. 
+17 "But 38:as the time of the promise drew near, which God had granted to Abraham, 39:the people increased and multiplied in Egypt 
  
 <br>
  
-19 41He dealt shrewdly with our race and forced our fathers to expose their infants, 42so that they would not be kept alive. 
+18 until there arose over Egypt another king 40:who did not know Joseph. 
  
 <br>
  
-20 43At this time Moses was born; and he was beautiful in God`s sight. And he was brought up for three months in his father`s house, 
+19 41:He dealt shrewdly with our race and forced our fathers to expose their infants, 42:so that they would not be kept alive. 
  
 <br>
  
-21 and 44when he was exposed, Pharaoh`s daughter adopted him and brought him up as her own son. 
+20 43:At this time Moses was born; and he was beautiful in God`s sight. And he was brought up for three months in his father`s house, 
  
 <br>
  
-22 And Moses 45was instructed in 46all the wisdom of the Egyptians, and he was 47mighty in his words and deeds. 
+21 and 44:when he was exposed, Pharaoh`s daughter adopted him and brought him up as her own son. 
  
 <br>
  
-23 "When he was forty years old, it came into his heart 48to visit his brothers, the children of Israel. 
+22 And Moses 45:was instructed in 46all the wisdom of the Egyptians, and he was 47:mighty in his words and deeds. 
+ 
+<br>
+ 
+23 "When he was forty years old, it came into his heart 48:to visit his brothers, the children of Israel. 
  
 <br>
  
@@ -249,11 +249,11 @@ As another deacon, Nicholas of Antioch, is specifically stated to have been a co
  
 <br>
  
-26 49And on the following day he appeared to them as they were quarreling and tried to reconcile them, saying, `Men, you are brothers. Why do you wrong each other?` 
+26 49:And on the following day he appeared to them as they were quarreling and tried to reconcile them, saying, `Men, you are brothers. Why do you wrong each other?` 
  
 <br>
  
-27 But the man who was wronging his neighbor thrust him aside, saying, 50`Who made you a ruler and a judge over us? 
+27 But the man who was wronging his neighbor thrust him aside, saying, 50:`Who made you a ruler and a judge over us? 
  
 <br>
  
@@ -261,11 +261,11 @@ As another deacon, Nicholas of Antioch, is specifically stated to have been a co
  
 <br>
  
-29 At this retort 51Moses fled and became an exile in the land of Midian, 52where he became the father of two sons. 
+29 At this retort 51:Moses fled and became an exile in the land of Midian, 52:where he became the father of two sons. 
  
 <br>
  
-30 "Now when forty years had passed, 53an angel appeared to him 54in the wilderness of Mount Sinai, in a flame of fire in a bush. 
+30 "Now when forty years had passed, 53:an angel appeared to him 54:in the wilderness of Mount Sinai, in a flame of fire in a bush. 
  
 <br>
  
@@ -273,75 +273,75 @@ As another deacon, Nicholas of Antioch, is specifically stated to have been a co
  
 <br>
  
-32 55`I am the God of your fathers, the God of Abraham and of Isaac and of Jacob.` And Moses trembled and did not dare to look. 
+32 55:`I am the God of your fathers, the God of Abraham and of Isaac and of Jacob.` And Moses trembled and did not dare to look. 
  
 <br>
  
-33 Then the Lord said to him, 56`Take off the sandals from your feet, for the place where you are standing is holy ground. 
+33 Then the Lord said to him, 56:`Take off the sandals from your feet, for the place where you are standing is holy ground. 
  
 <br>
  
-34 57I have surely seen the affliction of my people who are in Egypt, and 58have heard their groaning, and 59I have come down to deliver them. 60And now come, I will send you to Egypt.` 
+34 57:I have surely seen the affliction of my people who are in Egypt, and 58:have heard their groaning, and 59:I have come down to deliver them. 60:And now come, I will send you to Egypt.` 
  
 <br>
  
-35 "This Moses, whom they rejected, 61saying, `Who made you a ruler and a judge?`--this man God sent as both ruler and redeemer 62by the hand of the angel who appeared to him in the bush. 
+35 "This Moses, whom they rejected, 61:saying, `Who made you a ruler and a judge?`--this man God sent as both ruler and redeemer 62:by the hand of the angel who appeared to him in the bush. 
  
 <br>
  
-36 63This man led them out, performing 64wonders and signs 65in Egypt and 66at the Red Sea and 67in the wilderness for 68forty years. 
+36 63:This man led them out, performing 64:wonders and signs 65:in Egypt and 66at the Red Sea and 67:in the wilderness for 68:forty years. 
  
 <br>
  
-37 This is the Moses who said to the Israelites, `God will raise up for you 69a prophet like me from your brothers.` 
+37 This is the Moses who said to the Israelites, `God will raise up for you 69:a prophet like me from your brothers.` 
  
 <br>
  
-38 This is the one 70who was in the congregation in the wilderness with 71the angel who spoke to him at Mount Sinai, and with our fathers. 72He received 73living 74oracles to give to us. 
+38 This is the one 70:who was in the congregation in the wilderness with 71:the angel who spoke to him at Mount Sinai, and with our fathers. 72:He received 73:living 74:oracles to give to us. 
  
 <br>
  
-39 Our fathers refused to obey him, but thrust him aside, and 75in their hearts they turned to Egypt, 
+39 Our fathers refused to obey him, but thrust him aside, and 75:in their hearts they turned to Egypt, 
  
 <br>
  
-40 saying to Aaron, 76`Make for us gods who will go before us. As for this Moses who led us out from the land of Egypt, we do not know what has become of him.` 
+40 saying to Aaron, 76:`Make for us gods who will go before us. As for this Moses who led us out from the land of Egypt, we do not know what has become of him.` 
  
 <br>
  
-41 And 77they made a calf in those days, and offered a sacrifice to the idol and 78were rejoicing in 79the works of their hands. 
+41 And 77:they made a calf in those days, and offered a sacrifice to the idol and 78:were rejoicing in 79:the works of their hands. 
  
 <br>
  
-42 But 80God turned away and 81gave them over to worship 82the host of heaven, as it is written in the book of the prophets: 83"`Did you bring to me slain beasts and sacrifices, 84during the forty years in the wilderness, O house of Israel? 
+42 But 80:God turned away and 81:gave them over to worship 82:the host of heaven, as it is written in the book of the prophets: 83:"`Did you bring to me slain beasts and sacrifices, 84:during the forty years in the wilderness, O house of Israel? 
  
 <br>
  
-43 You took up the tent of 85Moloch and the star of your god Rephan, the images that you made to worship; and I will send you into exile beyond Babylon.` 
+43 You took up the tent of 85:Moloch and the star of your god Rephan, the images that you made to worship; and I will send you into exile beyond Babylon.` 
  
 <br>
  
-44 "Our fathers had 86the tent of witness in the wilderness, just as he who spoke to Moses 87directed him to make it, according to the pattern that he had seen. 
+44 "Our fathers had 86:the tent of witness in the wilderness, just as he who spoke to Moses 87:directed him to make it, according to the pattern that he had seen. 
  
 <br>
  
-45 Our fathers in turn 88brought it in with Joshua when they 89dispossessed the nations 90that God drove out before our fathers. So it was 91until the days of David, 
+45 Our fathers in turn 88:brought it in with Joshua when they 89:dispossessed the nations 90:that God drove out before our fathers. So it was 91:until the days of David, 
  
 <br>
  
-46 92who found favor in the sight of God and 93asked to find a dwelling place for 94the God of Jacob.a 
+46 92:who found favor in the sight of God and 93:asked to find a dwelling place for 94:the God of Jacob.a 
  
 <br>
  
-47 But it was 95Solomon who built a house for him. 
+47 But it was 95:Solomon who built a house for him. 
  
 <br>
  
-48 96Yet the Most High does not dwell 97in houses made by hands, as the prophet says, 
+48 96:Yet the Most High does not dwell 97:in houses made by hands, as the prophet says, 
  
 <br>
  
-49 98"`Heaven is my throne, 99and the earth is my footstool. What kind of house will you build for me, says the Lord, or what is the place of my rest? 
+49 98:"`Heaven is my throne, 99:and the earth is my footstool. What kind of house will you build for me, says the Lord, or what is the place of my rest? 
  
 <br>
  
@@ -349,27 +349,27 @@ As another deacon, Nicholas of Antioch, is specifically stated to have been a co
  
 <br>
  
-51 100"You stiff-necked people, 101uncircumcised in heart and ears, you always resist the Holy Spirit. 102As your fathers did, so do you. 
+51 100:"You stiff-necked people, 101:uncircumcised in heart and ears, you always resist the Holy Spirit. 102:As your fathers did, so do you. 
  
 <br>
  
-52 103Which of the prophets did your fathers not persecute? And they killed those who announced beforehand the coming of 104the Righteous One, 105whom you have now betrayed and murdered, 
+52 103:Which of the prophets did your fathers not persecute? And they killed those who announced beforehand the coming of 104:the Righteous One, 105:whom you have now betrayed and murdered, 
  
 <br>
  
-53 you who received the law 106as delivered by angels and 107did not keep it." 
+53 you who received the law 106as delivered by angels and 107:did not keep it." 
  
 <br>
  
-54 Now when they heard these things 108they were enraged, and they 109ground their teeth at him. 
+54 Now when they heard these things 108:they were enraged, and they 109:ground their teeth at him. 
  
 <br>
  
-55 But he, 110full of the Holy Spirit, gazed into heaven and saw 111the glory of God, and Jesus standing 112at the right hand of God. 
+55 But he, 110:full of the Holy Spirit, gazed into heaven and saw 111:the glory of God, and Jesus standing 112:at the right hand of God. 
  
 <br>
  
-56 And he said, "Behold, I see 113the heavens opened, and 114the Son of Man standing 115at the right hand of God." 
+56 And he said, "Behold, I see 113:the heavens opened, and 114:the Son of Man standing 115:at the right hand of God." 
  
 <br>
  
@@ -377,15 +377,15 @@ As another deacon, Nicholas of Antioch, is specifically stated to have been a co
  
 <br>
  
-58 Then 116they cast him out of the city and 117stoned him. And 118the witnesses laid down their garments 119at the feet of a young man named Saul. 
+58 Then 116:they cast him out of the city and 117:stoned him. And 118:the witnesses laid down their garments 119:at the feet of a young man named Saul. 
  
 <br>
  
-59 And as they were stoning Stephen, 120he called out, "Lord Jesus, 121receive my spirit." 
+59 And as they were stoning Stephen, 120:he called out, "Lord Jesus, 121:receive my spirit." 
  
 <br>
  
-60 And 122falling to his knees he cried out with a loud voice, 123"Lord, do not hold this sin against them." And when he had said this, 124he fell asleep.
+60 And 122:falling to his knees he cried out with a loud voice, 123:"Lord, do not hold this sin against them." And when he had said this, 124:he fell asleep.
 </p><h5><a href="#Medhanealem">Back to top</a></h5> 
  
 <b><small><h6 align="center"><span style="color:white">Copyright ©2020 | Designed by : Yared Tadesse All right reserved | Emailadress:*******@hotmail.com</span></h6></small></b>
